--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-ejs-layouts": "^2.5.0",
-    "http-status-codes": "^1.3.0"
+    "http-status-codes": "^1.3.0",
+    "mongoose": "^5.11.19"
   }
 }
